Updated Basic Site Structure

--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kyle Chin's Portfolio</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <h1>Hi, I'm Kyle, a curious and passionate web developer.</h1>
-    <script src="script.js"></script>
-</body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <main>
+      <header class="primary-header">
+        <a href="./index.html">
+          <div class="site-logo">
+            <div class="headshot">
+              <figure></figure>
+            </div>
+            <div class="site-name">
+              <h1>Kyle Chin</h1>
+            </div>
+          </div>
+        </a>
+        <nav id="siteNav" class="site-nav">
+            <ul class="primary-nav">
+                <li class="nav-item">
+                    <a href="#skills">Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#work">Work</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#about">About</a>
+                </li>
+                <li class="nav-item btn">
+                    <a href="#say-hello">Say Hello</a>
+                </li>
+            </ul>
+        </nav>
+      </header>
+
+      <h2>Hi, I'm Kyle, a curious and passionate web developer.</h2>
+      <script src="script.js"></script>
+      <footer>
+        <p>This is my footer.</p>
+      </footer>
+    </main>
+  </body>
 </html>
