--- a/index.html
+++ b/index.html
@@ -7,36 +7,36 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <main>
-      <header class="primary-header">
-        <a href="./index.html">
-          <div class="site-logo">
-            <div class="headshot">
-              <figure></figure>
-            </div>
-            <div class="site-name">
-              <h1>Kyle Chin</h1>
-            </div>
+    <header class="primary-header">
+      <a href="./index.html">
+        <div class="site-logo">
+          <div class="headshot-wrapper">
+            <figure><img class="headshot" src="./images/kyle-headshot-square.jpg" alt="Kyle Chin Headshot" width="75" height="75" /></figure>
           </div>
-        </a>
-        <nav id="siteNav" class="site-nav">
-            <ul class="primary-nav">
-                <li class="nav-item">
-                    <a href="#skills">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#work">Work</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#about">About</a>
-                </li>
-                <li class="nav-item btn">
-                    <a href="#say-hello">Say Hello</a>
-                </li>
-            </ul>
-        </nav>
-      </header>
+          <div class="site-name">
+            <h1>Kyle Chin</h1>
+          </div>
+        </div>
+      </a>
 
+      <nav id="siteNav" class="site-nav">
+        <ul class="primary-nav">
+          <li class="nav-item">
+            <a href="#skills">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a href="#work">Work</a>
+          </li>
+          <li class="nav-item">
+            <a href="#about">About</a>
+          </li>
+          <li class="nav-item btn">
+            <a href="#say-hello">Say Hello</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
       <h2>Hi, I'm Kyle, a curious and passionate web developer.</h2>
       <script src="script.js"></script>
       <footer>
