Added Mobile Menu Classes

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             </li>
           </ul>
         </nav>
+        <div class="mobile-menu">
+            <div class="burger" id="burger">
+                
+            </div>
+        </div>
         <div class="cta">
           <a class="primary-nav-cta-btn" id="primary-nav-cta-btn" href="#contact">Say Hello</a>
         </div>
