--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
           </ul>
         </nav>
         <div class="mobile-menu">
-            <div class="burger" id="burger">
-                
+            <div class="mobile-menu-burger" id="mobile-menu-burger">
+                <div class="top-bar"></div>
+                <div class="middle-bar"></div>
+                <div class="bottom-bar"></div>
             </div>
         </div>
         <div class="cta">
