Updated Mobile Menu with Close Button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
           </div>
         </a>
-        <nav id="siteNav" class="site-nav">
+        <nav class="site-nav" id="siteNav">
           <ul class="primary-nav">
             <li class="nav-item">
               <a href="#skills">Skills</a>
@@ -31,16 +31,24 @@
             <li class="nav-item">
               <a href="#about">About</a>
             </li>
+            <li class="nav-item menu-cta">
+                <a href="#contact">Say Hello</a>
+              </li>
           </ul>
         </nav>
         <div class="mobile-menu">
-            <div class="mobile-menu-burger" id="mobile-menu-burger">
+            <div class="mobile-menu-burger" id="mobileMenuBurger">
                 <div class="top-bar"></div>
                 <div class="middle-bar"></div>
                 <div class="bottom-bar"></div>
             </div>
+            <div class="mobile-menu-nav-items" id="mobileMenuNavItems">
+                <div class="mobile-close-btn">
+                    <button aria-label="Mobile Menu Close Button" class="close-btn" id="closeBtn"></button>
+                </div>
+            </div>
         </div>
-        <div class="cta">
+        <div class="cta" id="menuBtn">
           <a class="primary-nav-cta-btn" id="primary-nav-cta-btn" href="#contact">Say Hello</a>
         </div>
       </div>
