--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Kyle Chin's Portfolio</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="description" content="Hello! I'm Kyle Chin, a strategist, designer, and developer. Contact me today to start your next web project." />
+    <script src="https://kit.fontawesome.com/862d0b7dda.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header class="primary-header">
@@ -13,7 +14,7 @@
         <a class="site-logo" href="./index.html">
           <div class="logo-inner">
             <div class="headshot">
-              <figure class="headshot"><img src="./images/kyle-headshot-square.jpg" alt="Kyle Chin Headshot" width="80" height="80" /></figure>
+              <figure><img src="./images/kyle-headshot-square.jpg" alt="Kyle Chin Headshot" width="80" height="80" /></figure>
             </div>
             <div class="site-name">
               <p>Kyle Chin</p>
@@ -44,7 +45,7 @@
             </div>
             <div class="mobile-menu-nav-items" id="mobileMenuNavItems">
                 <div class="mobile-close-btn">
-                    <button aria-label="Mobile Menu Close Button" class="close-btn" id="closeBtn"></button>
+                    <button aria-label="Mobile Menu Close Button" class="close-btn" id="closeBtn"><i class="fa-solid fa-xmark"></i></button>
                 </div>
             </div>
         </div>
