--- a/index.html
+++ b/index.html
@@ -32,22 +32,35 @@
             <li class="nav-item">
               <a href="#about">About</a>
             </li>
-            <li class="nav-item menu-cta">
-                <a href="#contact">Say Hello</a>
-              </li>
           </ul>
         </nav>
         <div class="mobile-menu">
-            <div class="mobile-menu-burger" id="mobileMenuBurger">
-                <div class="top-bar"></div>
-                <div class="middle-bar"></div>
-                <div class="bottom-bar"></div>
-            </div>
+          <div class="mobile-menu-burger" id="mobileMenuBurger">
+            <div class="top-bar"></div>
+            <div class="middle-bar"></div>
+            <div class="bottom-bar"></div>
+          </div>
+          <div class="mobile-menu-nav">
             <div class="mobile-menu-nav-items" id="mobileMenuNavItems">
-                <div class="mobile-close-btn">
-                    <button aria-label="Mobile Menu Close Button" class="close-btn" id="closeBtn"><i class="fa-solid fa-xmark"></i></button>
-                </div>
+              <ul class="mobile-menu-nav-list-items">
+                <li class="nav-item">
+                  <a href="#skills">Skills</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#work">Work</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                  <a href="#contact">Say Hello</a>
+                </li>
+              </ul>
             </div>
+            <div class="mobile-close-btn">
+              <button aria-label="Mobile Menu Close Button" class="close-btn" id="closeBtn"><i class="fa-solid fa-xmark"></i></button>
+            </div>
+          </div>
         </div>
         <div class="cta" id="menuBtn">
           <a class="primary-nav-cta-btn" id="primary-nav-cta-btn" href="#contact">Say Hello</a>
