--- a/index.html
+++ b/index.html
@@ -68,10 +68,16 @@
       </div>
     </header>
     <main>
-      <h2>Hi, I'm Kyle, a curious and passionate web developer.</h2>
+      <section class="hero">
+        <div class="inner-section max-width">
+          <h1>Frontend Developer</h1>
+        </div>
+      </section>
       <script src="script.js"></script>
       <footer>
+        <div class="inner-section max-width">
         <p>This is my footer.</p>
+        </div>
       </footer>
     </main>
   </body>
