--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
     </header>
     <main>
       <section class="hero">
-        <div class="inner-section max-width">
-          <h1>Frontend Developer</h1>
+        <div class="inner-container max-width">
+          <h1 class="outline-heading-large">Frontend Developer</h1>
         </div>
       </section>
       <script src="script.js"></script>
       <footer>
-        <div class="inner-section max-width">
+        <div class="inner-container max-width">
         <p>This is my footer.</p>
         </div>
       </footer>
