--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="middle-bar"></div>
             <div class="bottom-bar"></div>
           </div>
-          <div class="mobile-menu-nav">
+          <div class="mobile-menu-nav" id="mobileMenuNav">
             <div class="mobile-menu-nav-items" id="mobileMenuNavItems">
               <ul class="mobile-menu-nav-list-items">
                 <li class="nav-item">
@@ -69,15 +69,21 @@
     </header>
     <main>
       <section class="hero">
-        <div class="inner-container max-width">
+        <div class="inner-container max-width flex-column">
           <h1 class="outline-heading-large">Frontend Developer</h1>
+          <div class="hero-subhead">
+            <p>Open to Work</p>
+            <p class="light-font">Available Now</p>
+          </div>
+          <div class="location vertical flex-column">
+            <p>45.6280&deg; N, 122.6739&deg; W</p>
+            <p>Vancouver, WA</p>
+          </div>
         </div>
       </section>
       <script src="script.js"></script>
       <footer>
-        <div class="inner-container max-width">
-        <p>This is my footer.</p>
-        </div>
+        <div class="inner-container max-width"></div>
       </footer>
     </main>
   </body>
