Started Job Titles Section

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
           </div>
         </div>
       </section>
+      <section class="job-titles">
+        <div class="inner-container full-width">
+            <div class="job-titles-bg"></div>
+        </div>
+      </section>
       <script src="script.js"></script>
       <footer>
         <div class="inner-container max-width"></div>
