Updated Skills Section

--- a/index.html
+++ b/index.html
@@ -81,9 +81,33 @@
           </div>
         </div>
       </section>
-      <section class="job-titles">
-        <div class="inner-container full-width">
-            <div class="job-titles-bg"></div>
+      <section class="image-separator">
+        <div class="inner-container">
+          <div class="image-separator-bg">
+            <img src="./images/business-strategy.jpg" alt="Business Strategy" width="1440" height="auto" />
+          </div>
+        </div>
+      </section>
+      <section class="skills" id="skills">
+        <div class="inner-container medium-width flex-row flex-column-mobile justify-space-between large-gap">
+          <h2 class="primary-h2">Skills</h2>
+          <div class="skills-list flex-row large-gap">
+            <div class="skills-column-1">
+              <ul class="custom-list">
+                <li>HTML, CSS, JavaScript, and PHP</li>
+                <li>WordPress and Visual Page Builders (Elementor and WP Bakery)</li>
+                <li>Bash / Linux Terminal</li>
+                <li>Git / GitHub Version Control</li>
+              </ul>
+            </div>
+            <div class="skills-column-2">
+              <ul class="custom-list">
+                <li>FTP, cPanel, SMTP, and DNS</li>
+                <li>Photoshop, Illustrator, Sketch, and Figma</li>
+                <li>Google Analytics, Search Console, and Tag Manager</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
       <script src="script.js"></script>
