Added About Section

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <nav class="site-nav" id="siteNav">
           <ul class="primary-nav">
             <li class="nav-item">
+              <a href="#about">About</a>
+            </li>
+            <li class="nav-item">
               <a href="#skills">Skills</a>
             </li>
             <li class="nav-item">
               <a href="#work">Work</a>
-            </li>
-            <li class="nav-item">
-              <a href="#about">About</a>
             </li>
           </ul>
         </nav>
@@ -44,13 +44,13 @@
             <div class="mobile-menu-nav-items" id="mobileMenuNavItems">
               <ul class="mobile-menu-nav-list-items">
                 <li class="nav-item">
+                  <a href="#about">About</a>
+                </li>
+                <li class="nav-item">
                   <a href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
                   <a href="#work">Work</a>
-                </li>
-                <li class="nav-item">
-                  <a href="#about">About</a>
                 </li>
                 <li class="nav-item">
                   <a href="#contact">Say Hello</a>
@@ -72,7 +72,7 @@
         <div class="inner-container max-width flex-column">
           <h1 class="outline-heading-large">Frontend Developer</h1>
           <div class="hero-subhead">
-            <p>Open to Work</p>
+            <p class="white">Open to Work</p>
             <p class="light-font">Available Now</p>
           </div>
           <div class="location vertical flex-column">
@@ -88,13 +88,43 @@
           </div>
         </div>
       </section>
-      <section class="skills" id="skills">
-        <div class="inner-container medium-width flex-row flex-column-mobile justify-space-between large-gap">
-          <h2 class="primary-h2">Skills</h2>
+      <section class="about no-bottom-padding" id="about">
+        <div class="inner-container medium-width">
+          <h2 class="primary-h2 white">Hello</h2>
+          <div class="large-text">
+            <p>My name is Kyle, and I'm a web designer and front-end developer. Since 2013, I've successfully managed, built, and delivered 150+ websites from initial discovery to site launch.</p>
+            <p>
+              My passion is helping businesses and individuals establish a strong online presence by creating beautiful, user-friendly websites that convert. I want to help you achieve your website goals, so please <a href="#contact">drop me a line</a> if you think we're a good fit for a project.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="job-titles no-bottom-padding">
+        <div class="inner-container max-width flex-row flex-column-tablet large-gap">
+            <div class="job-card strategist-card flex-column large-gap">
+                <h3>Strategist</h3>
+                <p class="percentage">10 Percent</p>
+                <p class="pagination">// 01</p>
+            </div>
+            <div class="job-card designer-card flex-column large-gap">
+                <h3>Designer</h3>
+                <p class="percentage">20 Percent</p>
+                <p class="pagination">// 02</p>
+            </div>
+            <div class="job-card developer-card flex-column large-gap">
+                <h3>Developer</h3>
+                <p class="percentage">70 Percent</p>
+                <p class="pagination">// 03</p>
+            </div>
+        </div>
+      </section>
+      <section class="skills no-bottom-padding" id="skills">
+        <div class="inner-container large-width flex-row flex-column-mobile justify-space-between large-gap">
+          <h2 class="primary-h2 white">Skills</h2>
           <div class="skills-list flex-row large-gap">
             <div class="skills-column-1">
               <ul class="custom-list">
-                <li>HTML, CSS, JavaScript, and PHP</li>
+                <li><a href="https://verify.w3schools.com/1O5HIAQZ4E" target="_blank">HTML</a>, <a href="https://verify.w3schools.com/1O5JOA4BC6" target="_blank">CSS</a>, and JavaScript certified</li>
                 <li>WordPress and Visual Page Builders (Elementor and WP Bakery)</li>
                 <li>Bash / Linux Terminal</li>
                 <li>Git / GitHub Version Control</li>
@@ -108,6 +138,11 @@
               </ul>
             </div>
           </div>
+        </div>
+      </section>
+      <section class="work" id="work">
+        <div class="inner-container max-width">
+          <h2 class="outline-heading-large">Select Work</h2>
         </div>
       </section>
       <script src="script.js"></script>
