Updated Skills and Added Image Dividers

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kyle Chin's Portfolio</title>
+    <title>Kyle Chin | Designer & Frontend Developer</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png" />
     <meta name="description" content="Hello! I'm Kyle Chin, a strategist, designer, and developer. Contact me today to start your next web project." />
     <script src="https://kit.fontawesome.com/862d0b7dda.js" crossorigin="anonymous"></script>
   </head>
@@ -75,55 +76,88 @@
             <p class="white">Open to Work</p>
             <p class="light-font">Available Now</p>
           </div>
+          <div class="drop-down-arrow">
+            <a href="#about">
+              <figure>
+                <img class="arrow-icon" src="./images/arrow-white.svg" alt="Drop Down Arrow" />
+              </figure>
+            </a>
+          </div>
           <div class="location vertical flex-column">
             <p>45.6280&deg; N, 122.6739&deg; W</p>
             <p>Vancouver, WA</p>
           </div>
         </div>
       </section>
-      <section class="image-separator">
+      <section class="image-separator-right">
         <div class="inner-container">
           <div class="image-separator-bg">
-            <img src="./images/business-strategy.jpg" alt="Business Strategy" width="1440" height="auto" />
+            <figure>
+              <img src="./images/values-exercise.jpg" alt="Kyle Chin Participating in Business Values and Strategy Exercise" width="1440" height="auto" />
+            </figure>
+          </div>
+          <div class="photo-attribution-left vertical flex-column">
+            <p>Photo by <a href="https://www.arieljordanphoto.com/" target="_blank">Ariel Jordan</a></p>
           </div>
         </div>
       </section>
       <section class="about no-bottom-padding" id="about">
         <div class="inner-container medium-width">
-          <h2 class="primary-h2 white">Hello</h2>
-          <div class="large-text">
-            <p>My name is Kyle, and I'm a web designer and front-end developer. Since 2013, I've successfully managed, built, and delivered 150+ websites from initial discovery to site launch.</p>
+          <h2 class="primary-h2 white">Hey There</h2>
+          <div class="large-text underline-link">
             <p>
-              My passion is helping businesses and individuals establish a strong online presence by creating beautiful, user-friendly websites that convert. I want to help you achieve your website goals, so please <a href="#contact">drop me a line</a> if you think we're a good fit for a project.
+              My name is Kyle, and I'm a web designer and front-end developer. Over the last ten years, I've overseen the development and delivery of over 150 websites from initial discovery to site launch. My project experience is quite diverse, and, in a pinch, I'm comfortable handling account
+              management, content strategy, and SEO/Digital Marketing.
+            </p>
+            <p>My passion is helping businesses and individuals establish a strong online presence by creating beautiful, user-friendly websites that drive results. If you think we're a good fit for a project, please feel free to <a href="#contact">reach out</a>.</p>
+          </div>
+        </div>
+      </section>
+      <section class="job-titles">
+        <div class="inner-container max-width flex-row flex-column-tablet large-gap">
+          <div class="job-card developer-card flex-column large-gap">
+            <h3>Developer</h3>
+            <p class="percentage">70 Percent</p>
+            <p class="pagination">// 01</p>
+          </div>
+          <div class="job-card designer-card flex-column large-gap">
+            <h3>Designer</h3>
+            <p class="percentage">20 Percent</p>
+            <p class="pagination">// 02</p>
+          </div>
+          <div class="job-card strategist-card flex-column large-gap">
+            <h3>Strategist</h3>
+            <p class="percentage">10 Percent</p>
+            <p class="pagination">// 03</p>
+          </div>
+        </div>
+      </section>
+      <section class="image-separator-left">
+        <div class="inner-container">
+          <div class="image-separator-bg">
+            <figure>
+              <img src="./images/business-strategy.jpg" alt="Whiteboard Website Strategy Session" width="1440" height="auto" />
+            </figure>
+          </div>
+          <div class="photo-attribution-right vertical flex-column">
+            <p>
+              Photo by <a href="https://unsplash.com/@kaleidico?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Kaleidico</a> on
+              <a href="https://unsplash.com/photos/two-people-drawing-on-whiteboard-26MJGnCM0Wc?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
             </p>
           </div>
         </div>
       </section>
-      <section class="job-titles no-bottom-padding">
-        <div class="inner-container max-width flex-row flex-column-tablet large-gap">
-            <div class="job-card strategist-card flex-column large-gap">
-                <h3>Strategist</h3>
-                <p class="percentage">10 Percent</p>
-                <p class="pagination">// 01</p>
-            </div>
-            <div class="job-card designer-card flex-column large-gap">
-                <h3>Designer</h3>
-                <p class="percentage">20 Percent</p>
-                <p class="pagination">// 02</p>
-            </div>
-            <div class="job-card developer-card flex-column large-gap">
-                <h3>Developer</h3>
-                <p class="percentage">70 Percent</p>
-                <p class="pagination">// 03</p>
-            </div>
-        </div>
-      </section>
       <section class="skills no-bottom-padding" id="skills">
         <div class="inner-container large-width flex-row flex-column-mobile justify-space-between large-gap">
-          <h2 class="primary-h2 white">Skills</h2>
+          <div class="heading-with-cta">
+            <h2 class="primary-h2 white">Skills</h2>
+            <div class="arrow-btn">
+              <a href="./docs/kyle-chin-resume.pdf" target="_blank" class="arrow-btn-text">View Résumé</a>
+            </div>
+          </div>
           <div class="skills-list flex-row large-gap">
             <div class="skills-column-1">
-              <ul class="custom-list">
+              <ul class="custom-list underline-link">
                 <li><a href="https://verify.w3schools.com/1O5HIAQZ4E" target="_blank">HTML</a>, <a href="https://verify.w3schools.com/1O5JOA4BC6" target="_blank">CSS</a>, and JavaScript certified</li>
                 <li>WordPress and Visual Page Builders (Elementor and WP Bakery)</li>
                 <li>Bash / Linux Terminal</li>
@@ -140,8 +174,27 @@
           </div>
         </div>
       </section>
+      <section class="hexagon-divider">
+        <div class="inner-container large-width flex-row">
+          <div class="hexagon-green">
+            <figure>
+              <img src="./images/hexagon-green-border.svg" alt="Green Hexagon" />
+            </figure>
+          </div>
+          <div class="hexagon-white">
+            <figure>
+              <img src="./images/hexagon-white.svg" alt="White Hexagon" />
+            </figure>
+          </div>
+          <div class="hexagon-black">
+            <figure>
+              <img src="./images/hexagon-black.svg" alt="Black Hexagon" />
+            </figure>
+          </div>
+        </div>
+      </section>
       <section class="work" id="work">
-        <div class="inner-container max-width">
+        <div class="inner-container large-width">
           <h2 class="outline-heading-large">Select Work</h2>
         </div>
       </section>
