--- a/index.html
+++ b/index.html
@@ -174,28 +174,93 @@
           </div>
         </div>
       </section>
-      <section class="hexagon-divider">
-        <div class="inner-container large-width flex-row">
-          <div class="hexagon-green">
+      <section class="hexagon-divider no-bottom-padding">
+        <div class="inner-container large-width flex-column flex-row-tablet large-gap">
+          <div class="hexagon-statistic hexagon-green">
             <figure>
-              <img src="./images/hexagon-green-border.svg" alt="Green Hexagon" />
+              <img src="./images/hexagon-green-border.svg" alt="Green Border Hexagon" />
+              <p class="hexagon-statistic-description"><span class="statistic-number">150+</span> Websites Built</p>
             </figure>
           </div>
-          <div class="hexagon-white">
+          <div class="hexagon-statistic hexagon-white">
             <figure>
               <img src="./images/hexagon-white.svg" alt="White Hexagon" />
+              <p class="hexagon-statistic-description"><span class="statistic-number">10</span> Years of Experience</p>
             </figure>
           </div>
-          <div class="hexagon-black">
+          <div class="hexagon-statistic hexagon-black">
             <figure>
               <img src="./images/hexagon-black.svg" alt="Black Hexagon" />
+              <p class="hexagon-statistic-description"><span class="statistic-number">6</span> Developer Certifications</p>
             </figure>
           </div>
         </div>
       </section>
       <section class="work" id="work">
-        <div class="inner-container large-width">
-          <h2 class="outline-heading-large">Select Work</h2>
+        <div class="inner-container max-width flex-column large-gap">
+          <h2 class="outline-heading-large">Work</h2>
+          <div class="select-work flex-column">
+            <article class="flex-column">
+              <div class="select-work-featured-img">
+                <figure>
+                  <img src="./images/snowboarder.jpg" alt="Burton Snowboarder on Mountain" />
+                </figure>
+              </div>
+              <!-- <div class="photo-attribution-right vertical flex-column">
+                <p>
+                  Photo by <a href="https://unsplash.com/@mvds?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Mads Rasmussen</a> on
+                  <a href="https://unsplash.com/photos/man-in-white-shirt-and-black-pants-carrying-black-and-yellow-skateboard-on-white-sand-during-fhQ816rFmN0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
+                </p>
+              </div> -->
+              <div class="select-work-content flex-column flex-row-tablet large-text underline-link">
+                <h3 class="select-work-heading">The Chill Foundation</h3>
+                <p class="select-work-description">
+                  Lorem ipsum dolor sit amet consectetur adipiscing elit, massa conubia turpis arcu at gravida cum est, nisl primis blandit accumsan ligula convallis. Per vitae pulvinar pellentesque taciti tellus egestas litora duis ut sociosqu morbi, integer feugiat metus platea ultrices id
+                  praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
+                </p>
+              </div>
+            </article>
+            <article class="flex-column">
+              <div class="select-work-featured-img">
+                <figure>
+                  <img src="./images/home-kitchen.jpg" alt="Custom Home Kitchen" />
+                </figure>
+              </div>
+              <!-- <div class="photo-attribution-right vertical flex-column">
+                  <p>
+                    Photo by <a href="https://unsplash.com/@mvds?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Mads Rasmussen</a> on
+                    <a href="https://unsplash.com/photos/man-in-white-shirt-and-black-pants-carrying-black-and-yellow-skateboard-on-white-sand-during-fhQ816rFmN0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
+                  </p>
+                </div> -->
+              <div class="select-work-content flex-column flex-row-tablet large-text underline-link">
+                <h3 class="select-work-heading">Mountainwood Homes</h3>
+                <p class="select-work-description">
+                  Lorem ipsum dolor sit amet consectetur adipiscing elit, massa conubia turpis arcu at gravida cum est, nisl primis blandit accumsan ligula convallis. Per vitae pulvinar pellentesque taciti tellus egestas litora duis ut sociosqu morbi, integer feugiat metus platea ultrices id
+                  praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
+                </p>
+              </div>
+            </article>
+            <article class="flex-column">
+              <div class="select-work-featured-img">
+                <figure>
+                  <img src="./images/weight-training.jpg" alt="Working Out" />
+                </figure>
+              </div>
+              <!-- <div class="photo-attribution-right vertical flex-column">
+                  <p>
+                    Photo by <a href="https://unsplash.com/@mvds?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Mads Rasmussen</a> on
+                    <a href="https://unsplash.com/photos/man-in-white-shirt-and-black-pants-carrying-black-and-yellow-skateboard-on-white-sand-during-fhQ816rFmN0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
+                  </p>
+                </div> -->
+              <div class="select-work-content flex-column flex-row-tablet large-text underline-link">
+                <h3 class="select-work-heading">Ritual Health & Fitness</h3>
+                <p class="select-work-description">
+                  Lorem ipsum dolor sit amet consectetur adipiscing elit, massa conubia turpis arcu at gravida cum est, nisl primis blandit accumsan ligula convallis. Per vitae pulvinar pellentesque taciti tellus egestas litora duis ut sociosqu morbi, integer feugiat metus platea ultrices id
+                  praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
+                </p>
+              </div>
+            </article>
+          </div>
         </div>
       </section>
       <script src="script.js"></script>
