Iterated Selected Work Section

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
           <h2 class="primary-h2 white">Hey There</h2>
           <div class="large-text underline-link">
             <p>
-              My name is Kyle, and I'm a web designer and front-end developer. Over the last ten years, I've overseen the development and delivery of over 150 websites from initial discovery to site launch. My project experience is quite diverse, and, in a pinch, I'm comfortable handling account
-              management, content strategy, and SEO/Digital Marketing.
+              My name is Kyle, and I'm a web designer and front-end developer. Over the last ten years, I've overseen the development and delivery of over 150 websites from initial discovery to site launch. My project experience is quite diverse and I've taken on other roles, including account
+              manager, content strategist, and SEO/Digital Marketer.
             </p>
             <p>My passion is helping businesses and individuals establish a strong online presence by creating beautiful, user-friendly websites that drive results. If you think we're a good fit for a project, please feel free to <a href="#contact">reach out</a>.</p>
           </div>
@@ -205,39 +205,54 @@
                 <figure>
                   <img src="./images/snowboarder.jpg" alt="Burton Snowboarder on Mountain" />
                 </figure>
+
+                <div class="photo-attribution-right vertical flex-column">
+                  <p>
+                    Photo by <a href="https://unsplash.com/@mvds?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">MSR</a> on
+                    <a href="https://unsplash.com/photos/man-in-white-shirt-and-black-pants-carrying-black-and-yellow-skateboard-on-white-sand-during-fhQ816rFmN0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
+                  </p>
+                </div>
               </div>
-              <!-- <div class="photo-attribution-right vertical flex-column">
-                <p>
-                  Photo by <a href="https://unsplash.com/@mvds?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Mads Rasmussen</a> on
-                  <a href="https://unsplash.com/photos/man-in-white-shirt-and-black-pants-carrying-black-and-yellow-skateboard-on-white-sand-during-fhQ816rFmN0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
-                </p>
-              </div> -->
-              <div class="select-work-content flex-column flex-row-tablet large-text underline-link">
-                <h3 class="select-work-heading">The Chill Foundation</h3>
-                <p class="select-work-description">
-                  Lorem ipsum dolor sit amet consectetur adipiscing elit, massa conubia turpis arcu at gravida cum est, nisl primis blandit accumsan ligula convallis. Per vitae pulvinar pellentesque taciti tellus egestas litora duis ut sociosqu morbi, integer feugiat metus platea ultrices id
-                  praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
-                </p>
+              <div class="select-work-content flex-column grid-tablet">
+                <div class="select-work-heading">
+                  <h3>The Chill Foundation</h3>
+                </div>
+                <div class="select-work-description large-text underline-link">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit, massa conubia turpis arcu at gravida cum est, nisl primis blandit accumsan ligula convallis. Per vitae pulvinar pellentesque taciti tellus egestas litora duis ut sociosqu morbi, integer feugiat metus platea ultrices id
+                    praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
+                  </p>
+                  <div class="arrow-btn">
+                    <a href="https://www.chill.org" target="_blank" class="arrow-btn-text">View Website</a>
+                  </div>
+                </div>
               </div>
             </article>
             <article class="flex-column">
               <div class="select-work-featured-img">
                 <figure>
-                  <img src="./images/home-kitchen.jpg" alt="Custom Home Kitchen" />
+                  <img src="./images/home-exterior.jpg" alt="Custom Home Exterior" />
                 </figure>
-              </div>
-              <!-- <div class="photo-attribution-right vertical flex-column">
+                <div class="photo-attribution-right vertical flex-column">
                   <p>
-                    Photo by <a href="https://unsplash.com/@mvds?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Mads Rasmussen</a> on
-                    <a href="https://unsplash.com/photos/man-in-white-shirt-and-black-pants-carrying-black-and-yellow-skateboard-on-white-sand-during-fhQ816rFmN0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
+                    Photo by <a href="https://unsplash.com/@flopt?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Flo Pappert</a> on
+                    <a href="https://unsplash.com/photos/black-suv-park-beside-white-and-brown-house-during-daytime-kspRwqFxOms?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
                   </p>
-                </div> -->
-              <div class="select-work-content flex-column flex-row-tablet large-text underline-link">
-                <h3 class="select-work-heading">Mountainwood Homes</h3>
-                <p class="select-work-description">
-                  Lorem ipsum dolor sit amet consectetur adipiscing elit, massa conubia turpis arcu at gravida cum est, nisl primis blandit accumsan ligula convallis. Per vitae pulvinar pellentesque taciti tellus egestas litora duis ut sociosqu morbi, integer feugiat metus platea ultrices id
-                  praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
-                </p>
+                </div>
+              </div>
+              <div class="select-work-content flex-column grid-tablet">
+                <div class="select-work-heading">
+                  <h3>Mountainwood Homes</h3>
+                </div>
+                <div class="select-work-description large-text underline-link">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit, massa conubia turpis arcu at gravida cum est, nisl primis blandit accumsan ligula convallis. Per vitae pulvinar pellentesque taciti tellus egestas litora duis ut sociosqu morbi, integer feugiat metus platea ultrices id
+                    praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
+                  </p>
+                  <div class="arrow-btn">
+                    <a href="https://www.mountainwoodhomes.com" target="_blank" class="arrow-btn-text">View Website</a>
+                  </div>
+                </div>
               </div>
             </article>
             <article class="flex-column">
@@ -245,19 +260,26 @@
                 <figure>
                   <img src="./images/weight-training.jpg" alt="Working Out" />
                 </figure>
-              </div>
-              <!-- <div class="photo-attribution-right vertical flex-column">
+                <div class="photo-attribution-right vertical flex-column">
                   <p>
-                    Photo by <a href="https://unsplash.com/@mvds?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Mads Rasmussen</a> on
-                    <a href="https://unsplash.com/photos/man-in-white-shirt-and-black-pants-carrying-black-and-yellow-skateboard-on-white-sand-during-fhQ816rFmN0?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
+                    Photo by <a href="https://unsplash.com/@visualsbyroyalz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">AM</a> on
+                    <a href="https://unsplash.com/photos/man-in-orange-tank-top-and-black-shorts-doing-exercise-aclkvEMIfL8?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank">Unsplash</a>
                   </p>
-                </div> -->
-              <div class="select-work-content flex-column flex-row-tablet large-text underline-link">
-                <h3 class="select-work-heading">Ritual Health & Fitness</h3>
-                <p class="select-work-description">
-                  Lorem ipsum dolor sit amet consectetur adipiscing elit, massa conubia turpis arcu at gravida cum est, nisl primis blandit accumsan ligula convallis. Per vitae pulvinar pellentesque taciti tellus egestas litora duis ut sociosqu morbi, integer feugiat metus platea ultrices id
-                  praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
-                </p>
+                </div>
+              </div>
+              <div class="select-work-content flex-column grid-tablet">
+                <div class="select-work-heading">
+                  <h3>Ritual Health and Fitness</h3>
+                </div>
+                <div class="select-work-description large-text underline-link">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipiscing elit, massa conubia turpis arcu at gravida cum est, nisl primis blandit accumsan ligula convallis. Per vitae pulvinar pellentesque taciti tellus egestas litora duis ut sociosqu morbi, integer feugiat metus platea ultrices id
+                    praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
+                  </p>
+                  <div class="arrow-btn">
+                    <a href="https://www.ritualhealthandfitness.com" target="_blank" class="arrow-btn-text">View Website</a>
+                  </div>
+                </div>
               </div>
             </article>
           </div>
