Finalized Select Work Section

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
                   </p>
                   <div class="arrow-btn">
-                    <a href="https://www.chill.org" target="_blank" class="arrow-btn-text">View Website</a>
+                    <a href="https://www.chill.org" target="_blank" class="arrow-btn-text">Visit Website</a>
                   </div>
                 </div>
               </div>
@@ -250,7 +250,7 @@
                     praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
                   </p>
                   <div class="arrow-btn">
-                    <a href="https://www.mountainwoodhomes.com" target="_blank" class="arrow-btn-text">View Website</a>
+                    <a href="https://www.mountainwoodhomes.com" target="_blank" class="arrow-btn-text">Visit Website</a>
                   </div>
                 </div>
               </div>
@@ -277,7 +277,7 @@
                     praesent sem fringilla. Quis potenti euismod aliquam porttitor, nisi fames.
                   </p>
                   <div class="arrow-btn">
-                    <a href="https://www.ritualhealthandfitness.com" target="_blank" class="arrow-btn-text">View Website</a>
+                    <a href="https://www.ritualhealthandfitness.com" target="_blank" class="arrow-btn-text">Visit Website</a>
                   </div>
                 </div>
               </div>
